--- a/style.css
+++ b/style.css
@@ -1,15 +1,28 @@
-
-body{
+body {
     width: 50%;
     margin: auto;
 }
-table, th, td{
+
+table {
+    width: 100%;
+}
+
+table,
+th,
+td {
     border: 1px solid black;
     border-collapse: collapse;
 }
-table{
-    width: 100%;
-}
+
 thead{
-    
+    background-color: rgb(0, 201, 60);
+}
+
+th,
+td {
+    text-align: left;
+    padding: 10px;
+}
+tr:nth-child(even){
+    background-color: #f2f2f2;
 }
