--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+    font-family: sans-serif;
+}
 body {
     width: 50%;
     margin: auto;
@@ -22,7 +25,12 @@ th,
 td {
     text-align: left;
     padding: 10px;
+    text-transform: capitalize;
 }
 tr:nth-child(even){
     background-color: #f2f2f2;
+}
+
+form{
+    margin-top: 10;
 }
