--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@ td {
     padding: 10px;
     text-transform: capitalize;
 }
-tr:nth-child(even){
+/* tr:nth-child(even){
     background-color: #f2f2f2;
-}
+} */
 
 .form-container{
     margin-top: 10;
